build(docker): bundle a Java 25 runtime in the distroless images
Move the six distroless image variants (root, root-snapshot, snapshot,
graaljs, clustered, webhook) from gcr.io/distroless/java17 to
gcr.io/distroless/java25, digest-pinned to the multi-arch OCI index rather
than a per-platform manifest — pinning a platform manifest has silently
broken arm64 here before.

The Java 17 floor in mockserver/pom.xml is the LIBRARY's bytecode floor, for
users embedding mockserver-netty on their own JVM, and is unchanged. The
images bundle their own JVM, so they were never bound by it.

The aot variant keeps its jlink-trimmed runtime: the baked Leyden AOT cache
is valid only for the exact JDK build it was trained against, so the stock
base would silently fall back to a cold start. Its comment claimed no
distroless/java25 base existed; that is no longer true and it now states the
real reason.

Also corrects documentation that stated the wrong JVM for an image. The
standard and local images build FROM eclipse-temurin:26 and run JDK 26, not
25; the AOT variant runs 25. Two consumer docs described the default
mockserver/mockserver image as distroless/java17 or java25 when its runtime
base is distroless/java-base-debian12. Every version claim now derives from
the FROM line of the Dockerfile it describes.

performance-tuning.md said -XX:+ZGenerational "will fail to start" on JDK 24+.
It does not: the JVM logs "Ignoring option ZGenerational; support was removed
in 24.0" and starts normally. Corrected, along with the note that -XX:+UseZGC
alone selects generational ZGC from 25 onward.

Verified by building and running each image: readiness via PUT
/mockserver/status, expectation created, request matched, all on Temurin
25.0.4.1. Checked the JDK 18-25 removals against the source: no
SecurityManager/AccessController, no Thread.stop/suspend/resume, no
sun.misc.Unsafe, no finalize() overrides, and every -XX: flag still valid.
On 25 the JVM emits a JEP 472 warning that Netty's native-libr